fix(CodeChunk): Fix ProgrammingLanguage selector icon size & alignment

--- a/packages/style-stencila/src/atoms/editor.css
+++ b/packages/style-stencila/src/atoms/editor.css
@@ -41,11 +41,13 @@ stencila-editor {
     @apply flex justify-end p-0 py-px m-0 border-t border-neutral-300;
 
     stencila-icon {
+      --height: 1em;
+      --width: 1em;
       @apply mr-1;
     }
 
     select {
-      @apply mr-2 text-xs text-right bg-transparent border-none appearance-none text-neutral-700 font-body;
+      @apply mr-2 text-xs text-left bg-transparent border-none appearance-none text-neutral-700 font-body;
 
       option {
         @apply text-right font-body;
